# model-stack

./: .gitignore  MANIFEST.in  README.md  example.py  masking.py  positional.py  pyproject.toml  sampling.py  setup.cfg  setup.py
attn/: README.md  __init__.py  backends.py  decoding.py  eager.py  factory.py  flash.py  gqa.py  interfaces.py  kv_cache.py  moe.py  optim_utils.py  quant.py  reference.py  triton.py  xformers.py
autotune/: README.md  __init__.py  callbacks.py  cli.py  presets.py  spaces.py  study.py  trial.py
blocks/: README.md  __init__.py  adapters.py  banded_attn_block.py  block_sparse_attn_block.py  config.py  cross_attn_block.py  decoder_block.py  dilated_local_attn_block.py  encoder_block.py  factory.py  gpt_block.py  init.py  inspect.py  llama_block.py  local_attn_block.py  moe_block.py  native_fusion.py  parallel_block.py  policies.py  prefix_lm_block.py  registry.py  schedules.py  segment_bidir_attn_block.py  shared.py  stack.py  strided_attn_block.py  targets.py  transformer_block.py  utils.py  window_pattern_attn_block.py
browser/: README.md
compress/: README.md  __init__.py  apply.py  distill.py  export.py  kv_cache.py  lora.py  pruning.py  quantization.py
corpus/: README.md  __init__.py  build.py  cli.py  dedup.py  manifest.py  pii.py
data/: README.md  __init__.py  batch.py  f5tts_6step_parity_failure_curriculum_v0.txt  f5tts_hard_phrase_curriculum_v0.txt  f5tts_hard_phrase_curriculum_v1.txt  f5tts_nonpeyton_static_hard_curriculum_v2.txt  f5tts_peyton_heldout_broad_eval_v0.txt  iterable.py  loader.py  tokenizer.py
docs/: README.md  apple_gpu_iphone_kernel_review.md  asr_teacher_distillation_plan.md  asr_training_runs.md  conversational_asr_dataset_plan.md  custom-kernel-architecture.md  f5tts_wasm_iphone_plan.md  hunyuan_avatar_fsdp.md  llama3b-asm.md  llama_hf_parity.md  model-dependency-diagnostics.md  model-stack-compatibility-patches.md  model-stack-conda-envs.md  model-stack-model-verification.md  world-model-validation.md
eval/: README.md  __init__.py  bench.py  calibration.py  cli.py  compare.py  latency.py  llama_hf_parity.py  loop.py  memory.py  metrics.py  report.py  seq.py  suite.py
examples/: ON_THE_FLY_ADAPTERS.md  README.md  debug_attention.py  debug_parity.py  debug_single_layer.py
experiments/: README.md
export/: README.md  browser_bitnet.py  cli.py  exporter.py
governance/: README.md  __init__.py  card.py  cli.py  lineage.py  receipt.py  sbom.py  signature.py  utils.py
interpret/: README.md  __init__.py  activation_cache.py  cli.py  generation.py  logit_diff.py  logit_lens.py  model_adapter.py  reporting.py  tracer.py  training.py  tuned_lens.py
kernel/: README.md  __init__.py  bench.py  flash.py  registry.py  rope.py  triton.py
model/: README.md  __init__.py  causal.py  checkpoint.py  compile.py  encoder.py  export.py  factory.py  generate.py  heads.py  hf_llama_loader.py  hf_snapshot.py  inspect.py  llama_bootstrap.py  lm.py  prefix_lm.py  registry.py  runtime_utils.py  seq2seq.py  utils.py
pack/: README.md  cli.py
rag/: README.md  __init__.py  cli.py  config.py  pipeline.py
registry/: README.md  __init__.py  client.py
rl/: README.md  __init__.py  cli.py  config.py  (+1 more)
(+1046 files in other folders)
