[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "model-stack"
version = "0.1.0"
description = "Local model stack: adapters, training utilities, and examples."
authors = [{ name = "Model Stack Contributors" }]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/peytontolbert/model-stack"
Repository = "https://github.com/peytontolbert/model-stack"

[project.optional-dependencies]
train = [
    "transformers>=4.41.0",
    "datasets>=2.16.0",
    "peft>=0.11.0",
    "accelerate>=0.28.0",
    "sentencepiece; platform_system != 'Windows'",
    "safetensors",
]

[tool.setuptools]
include-package-data = true
py-modules = ["positional", "sampling", "masking"]

[tool.setuptools.packages.find]
namespaces = true
include = ["*"]
exclude = [
    "*.tests*",
    "tests*",
    "docs*",
    "scripts*",
    "build*",
    "*.checkpoint*",
    "*.checkpoints*",
    "checkpoints*",
    "other_repos*",
    "examples*.datasets*",
    "examples*.artifacts*",
    "examples*.smoke_repo.checkpoints*",
]
