[metadata]
name = model-stack
version = 0.1.0
license = Apache-2.0
description = Local model stack: adapters, training utilities, and examples.
url = https://github.com/peytontolbert/model-stack

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    # Keep core minimal; large optional deps should be extras
    numpy>=1.23

[options.extras_require]
train =
    transformers>=4.41.0
    datasets>=2.16.0
    peft>=0.11.0
    accelerate>=0.28.0
    sentencepiece; platform_system != "Windows"
    safetensors

[options.packages.find]
exclude =
    *.tests*
    tests*
    docs*
    scripts*
    examples/*/artifacts*
    examples/*/datasets*


