[options]
packages = find:
py_modules =
    positional
    sampling
    masking
include_package_data = True
python_requires = >=3.10

[options.packages.find]
exclude =
    *.tests*
    tests*
    docs*
    scripts*
    build*
    *.checkpoint*
    *.checkpoints*
    checkpoints*
    other_repos*
    examples/*/artifacts*
    examples/*/datasets*
